// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with custom color, size and stroke width 1`] = `
.glamor-0,
[data-glamor-0] {
  display: inline-block;
  width: 16px;
  height: 16px;
  color: #f00;
  stroke-width: 1;
}

<span
  className="glamor-0"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100%\\" height=\\"100%\\" viewBox=\\"0 0 24 24\\" fill=\\"none\\" stroke=\\"currentColor\\" stroke-width=\\"inherit\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" class=\\"feather feather-home\\"><path d=\\"M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z\\"></path><polyline points=\\"9 22 9 12 15 12 15 22\\"></polyline></svg>",
    }
  }
/>
`;

exports[`renders without crashing 1`] = `
.glamor-0,
[data-glamor-0] {
  display: inline-block;
  width: 24px;
  height: 24px;
  color: currentColor;
  stroke-width: 2;
}

<span
  className="glamor-0"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100%\\" height=\\"100%\\" viewBox=\\"0 0 24 24\\" fill=\\"none\\" stroke=\\"currentColor\\" stroke-width=\\"inherit\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" class=\\"feather feather-square\\"><rect x=\\"3\\" y=\\"3\\" width=\\"18\\" height=\\"18\\" rx=\\"2\\" ry=\\"2\\"></rect></svg>",
    }
  }
/>
`;
